# display

./: .gitignore  HEADER.txt  README.md
bus_schedule/bus_schedule_esp32/: bus_schedule_esp32.ino  wifi_credentials.h
bus_schedule/bus_schedule_samd51/: bus_schedule_samd51.ino
bus_schedule/nextrip_test_server/: Cargo.toml
bus_schedule/nextrip_test_server/src/: main.rs
bus_schedule_matrix/: anim.h  bus_schedule_matrix.ino  wifi_credentials.h
message_web_server/: message_web_server.ino
wave/: wave.ino
